hphp/hack/test/typecheck/test_consts15.php.exp
File "test_consts15.php", line 7, characters 16-16:
Class D does not correctly implement all required methods  (Typing[4142])
File "test_consts15.php", line 7, characters 26-26:
Some methods are incompatible with those declared in type C
Read the following to see why:
File "test_consts15.php", line 8, characters 18-20:
Cannot re-declare this constant as abstract
File "test_consts15.php", line 4, characters 13-13:
Previously defined here
